--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -33,39 +33,37 @@
 </div>
  
 <main class="clearfix">
-  <section class="single-blog">
-    <h2 class="blog-headline">Blog</h2>
-    <section class="blog-box">
-      <h3 class="blog-box-headline">
-        <%= @blog.title %>
-      </h3>
- 
-      <div class="blog-box-content">
-        <p class="category">
-          <%= @blog.category %>
-        </p>
-        <p class="blog-date">
-          <%= @blog.created_at %>
-        </p>
-      </div>
-
-      <%= image_tag "img/forest.jpg", class:"single-image" %>
-      <p class="single-text">
-      	<%= @blog.body %>
+    <section class="single-blog">
+  <h2 class="blog-headline">Blog</h2>
+  <section class="blog-box">
+    <h3 class="blog-box-headline">
+      <%= @blog.title %>
+    </h3>
+    <div class="blog-box-content">
+      <p class="category">
+        <%= @blog.category %>
       </p>
-
-      <%= link_to "編集", edit_blog_path(@blog) %>
-      <%= link_to "削除", blog_path(@blog), method: :delete %>
- 
-      <div class="author-case clearfix">
-        <div class="author-image"></div>
-        <div class="author-box">
-          <p class="author-name">By JOHN SMITH / Photographer</p>
-          <p class="author-text">His black and white landscapes, often captured at times<br>of the day and night when the light is fleeting, or in poor<br>weather conditions, such as rain, fog, or snow, are<br>reminiscent of the calm in a storm all with an ethereal<br>quality. </p>
-        </div>
+      <p class="blog-date">
+        <%= @blog.created_at %>
+      </p>
+    </div>
+    <%= image_tag "img/forest.jpg", class:"single-image" %>
+    <p class="single-text">
+      <%= @blog.body %>
+    </p>
+    <a href="#">編集</a>
+    <a href="#">削除</a>
+    <div class="author-case clearfix">
+      <div class="author-image"></div>
+      <div class="author-box">
+        <p class="author-name">By JOHN SMITH / Photographer</p>
+        <p class="author-text">His black and white landscapes, often captured at times<br>
+        of the day and night when the light is fleeting, or in poor<br>
+        weather conditions, such as rain, fog, or snow, are<br>reminiscent of the calm in a storm all with an ethereal<br>quality. </p>
       </div>
-    </section>
+    </div>
   </section>
+</section>
  
   <div class="sidebar">
     <section class="popular">
