--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,8 @@
  *= require_tree .
  *= require_self
  */
+ 
+ /* common */
 * {
   margin: 0;
   padding: 0;
@@ -31,7 +33,7 @@ header, nav, h2, .main-visual, footer {
   font-family: Chalkduster, "Bradley Hand", Courier, "Segoe Print", sans-serif;
 }
 /* common */
-
+ 
 /* header */
 header {
   position: relative;
@@ -58,12 +60,12 @@ header .headline{
   margin: 0 auto;
 }
 .nav-list-item {
-  list-style: none;
+  list-style: none;   
   display: inline-block;
   margin: 0 20px;
 }
 /* header */
-
+ 
 /*main-visual*/
 .main-visual {
   width: 100%;
@@ -87,7 +89,7 @@ header .headline{
   margin-top: 30px;
 }
 /*main-visual*/
-
+ 
 /*main common*/
 main {
   width: 800px;
@@ -95,7 +97,7 @@ main {
   padding: 70px 0;
 }
 /*main common*/
-
+ 
 /*blogs*/
 .blog {
   width: 540px;
@@ -157,7 +159,7 @@ main {
   line-height: 30px;
 }
 /*blogs*/
-
+ 
 /*sidebar*/
 .sidebar {
   width: 230px;
@@ -210,7 +212,7 @@ main {
   background-image: url(img/road.jpg);
 }
 /*sidebar*/
-
+ 
 /*footer*/
 footer {
   text-align: center;
@@ -221,7 +223,7 @@ footer {
   color: #fff;
 }
 /*footer*/
-
+ 
 /*---show.html.erb---*/
 .single-blog {
   float: left;
